--- a/Contact.html
+++ b/Contact.html
@@ -42,13 +42,12 @@
     
             function getEmail()
             {
-            fetch("https://jsonformatter.org/json-editor/82d04c", {mode: 'no-cors'})
+            fetch("https://jsonplaceholder.typicode.com/posts", {method: 'POST', body : JSON.stringify([{"email" : "stvz.projethtml@gmail.com"}]), headers : {'Content-type':'application/json;charset=UTF-8',},})
             .then(function(response) {return response.json();})
-            .then(function (data)
+            .then(function (json)
                     {
-                        const objectURL= URL.createObjectURL(data);
-                        a.src=objectURL;
-                        console.log(objectURL.value);
+                        a.textContent=json[0].email;
+                        console.log(json[0].email);
                     }
                 );
             } 
